--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
+language: ruby
+matrix:
+  allow_failures:
+    - rvm: ruby-head
 rvm:
+  - rbx-18mode
+  - rbx-19mode
   - 1.8.7
   - 1.9.2
   - 1.9.3
-  - jruby
-  - rbx
-  - rbx-2.0
-  - ree
+  - ruby-head
